# spina-example-modules

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: input.cpp  input.hpp  output.cpp  output.hpp
